// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesList renders with messages set 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="pf-c-list pf-m-plain"
      >
        <li
          class=""
        >
          <article
            class="pf-c-card pf-m-compact pf-m-rounded pf-c-card--message pf-c-card--them"
            data-ouia-component-id="OUIA-Generated-Card-1"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__body"
            >
              Hello there!
            </div>
          </article>
        </li>
        <li
          class=""
        >
          <article
            class="pf-c-card pf-m-compact pf-m-rounded pf-c-card--message pf-c-card--us"
            data-ouia-component-id="OUIA-Generated-Card-2"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-c-card__body"
            >
              Hi, how can I help you?
            </div>
          </article>
        </li>
        <li
          class=""
        >
          <span
            class="pf-c-date"
          >
            Today 08:35
          </span>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="pf-c-list pf-m-plain"
    >
      <li
        class=""
      >
        <article
          class="pf-c-card pf-m-compact pf-m-rounded pf-c-card--message pf-c-card--them"
          data-ouia-component-id="OUIA-Generated-Card-1"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id=""
        >
          <div
            class="pf-c-card__body"
          >
            Hello there!
          </div>
        </article>
      </li>
      <li
        class=""
      >
        <article
          class="pf-c-card pf-m-compact pf-m-rounded pf-c-card--message pf-c-card--us"
          data-ouia-component-id="OUIA-Generated-Card-2"
          data-ouia-component-type="PF4/Card"
          data-ouia-safe="true"
          id=""
        >
          <div
            class="pf-c-card__body"
          >
            Hi, how can I help you?
          </div>
        </article>
      </li>
      <li
        class=""
      >
        <span
          class="pf-c-date"
        >
          Today 08:35
        </span>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MessagesList renders without messages set 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="pf-c-list pf-m-plain"
      >
        <li
          class=""
        >
          <div
            class="pf-c-skeleton"
            style="--pf-c-skeleton--Width: 90%;"
          >
            <span
              class="pf-u-screen-reader"
            >
              Loading messages
            </span>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="pf-c-skeleton"
            style="--pf-c-skeleton--Width: 66%;"
          >
            <span
              class="pf-u-screen-reader"
            >
              Loading messages
            </span>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="pf-c-skeleton"
            style="--pf-c-skeleton--Width: 77%;"
          >
            <span
              class="pf-u-screen-reader"
            >
              Loading messages
            </span>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="pf-c-skeleton"
            style="--pf-c-skeleton--Width: 33%;"
          >
            <span
              class="pf-u-screen-reader"
            >
              Loading messages
            </span>
          </div>
        </li>
        <li
          class="pf-u-mt-3xl"
        >
          <div
            class="pf-c-skeleton pf-u-ml-auto"
            style="--pf-c-skeleton--Width: 66%;"
          >
            <span
              class="pf-u-screen-reader"
            >
              Loading messages
            </span>
          </div>
        </li>
        <li
          class=""
        >
          <div
            class="pf-c-skeleton pf-u-ml-auto"
            style="--pf-c-skeleton--Width: 33%;"
          >
            <span
              class="pf-u-screen-reader"
            >
              Loading messages
            </span>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="pf-c-list pf-m-plain"
    >
      <li
        class=""
      >
        <div
          class="pf-c-skeleton"
          style="--pf-c-skeleton--Width: 90%;"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading messages
          </span>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="pf-c-skeleton"
          style="--pf-c-skeleton--Width: 66%;"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading messages
          </span>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="pf-c-skeleton"
          style="--pf-c-skeleton--Width: 77%;"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading messages
          </span>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="pf-c-skeleton"
          style="--pf-c-skeleton--Width: 33%;"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading messages
          </span>
        </div>
      </li>
      <li
        class="pf-u-mt-3xl"
      >
        <div
          class="pf-c-skeleton pf-u-ml-auto"
          style="--pf-c-skeleton--Width: 66%;"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading messages
          </span>
        </div>
      </li>
      <li
        class=""
      >
        <div
          class="pf-c-skeleton pf-u-ml-auto"
          style="--pf-c-skeleton--Width: 33%;"
        >
          <span
            class="pf-u-screen-reader"
          >
            Loading messages
          </span>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
